mail/mail-common/src/tests/draft/snapshots/proton_mail_common__draft__compose__tests__check_reply_from_html_with_text_as_default.snap
---
source: mail/mail-common/src/draft/../tests/draft/compose.rs
expression: draft.body()
snapshot_kind: text
---
<html><head></head><body><div class="protonmail_quote"><br><br>-------- Original Message --------<br>On Thursday, 01/01/70 at 00:00 Send InToVoid &lt;sender@void.org&gt; wrote:<br><blockquote class="protonmail_quote">Hello World</blockquote></div></body></html>
