mail/mail-common/src/tests/draft/snapshots/proton_mail_common__draft__compose__tests__check_reply_signature_html.snap
---
source: mail/mail-common/src/draft/../tests/draft/compose.rs
expression: draft.decrypted_body.body
snapshot_kind: text
---
<div class="protonmail_quote"><br/><br/>-------- Original Message --------<br/>On Thursday, 01/01/70 at 00:00 Send InToVoid &lt;sender@void.org&gt; wrote:<br/><blockquote class="protonmail_quote">Hello World</blockquote></div>
