mail/mail-common/src/tests/draft/snapshots/proton_mail_common__draft__compose__tests__message_signature_empty_without_address_or_mail_setting_signature.snap
---
source: mail/mail-common/src/draft/../tests/draft/compose.rs
expression: signature
snapshot_kind: text
---
<br><br><div class="protonmail_signature_block-user"></div>
