mail/mail-common/src/tests/draft/snapshots/proton_mail_common__draft__compose__tests__message_signature_with_address_and_mail_settings_signature.snap
---
source: mail/mail-common/src/draft/../tests/draft/compose.rs
expression: signature
---
<br><br>My Address Signature<br><br>Mail settings signature
