mail/mail-common/src/tests/draft/snapshots/proton_mail_common__draft__compose__tests__message_signature_with_all_signatures.snap
---
source: mail/mail-common/src/draft/../tests/draft/compose.rs
expression: signature
snapshot_kind: text
---
<br/><br/>My Address Signature<br/><br/>Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
