mail/mail-common/src/tests/draft/snapshots/proton_mail_common__draft__compose__tests__sanitize_draft_reply_html-2.snap
---
source: mail/mail-common/src/draft/../tests/draft/compose.rs
expression: to_save
snapshot_kind: text
---
<html><head></head><body><div class="protonmail_quote"><br><br>-------- Original Message --------<br>On Thursday, 01/01/70 at 00:00 Send InToVoid &lt;sender@void.org&gt; wrote:<br><blockquote class="protonmail_quote">


<section>
    
    <div>
        <img border="0" usemap="#fp" src="cats.jpg ">
        <map name="fp">
            <area coords="0,0,800,800" href="proton_exploit.html" shape="rect" target="_blank">
        </map>
    </div>

    <img width="" height="" alt="" src="mon-image.jpg">
    <img width="" height="" alt="" src="lol-image.jpg">
    <img width="" height="" alt="">
    <a href="lol-image.jpg" rel="noreferrer">Alll</a>
    <a href="jeanne-image.jpg" rel="noreferrer">Alll</a>
    <div background="jeanne-image.jpg">Alll</div>
    <div background="jeanne-image2.jpg">Alll</div>
    <p style="font-size:10.0pt;font-family:\\2018Calibri\\2019;color:black">
        Example style that caused regexps to crash
    </p>
    <img id="babase64" src="data:image/jpg;base64,iVBORw0KGgoAAAANSUhEUgAABoIAAAVSCAYAAAAisOk2AAAMS2lDQ1BJQ0MgUHJv
ZmlsZQAASImVVwdYU8kWnltSSWiBUKSE3kQp0qWE0CIISBVshCSQUGJMCCJ2FlkF
1y4ioK7oqoiLrgWQtaKudVHs/aGIysq6WLCh8iYF1tXvvfe9831z758z5/ynZO69
MwDo1PKk0jxUF4B8SYEsITKUNTEtnUXqAgSgD1AwGozk8eVSdnx8DIAydP+nvLkO">
</section>


</blockquote></div></body></html>
