mail/mail-common/src/tests/draft/snapshots/proton_mail_common__draft__compose__tests__sanitize_pasted_content.snap
---
source: mail/mail-common/src/draft/../tests/draft/compose.rs
expression: result
---
<html><head></head>
            <body>
                <div>
                    <p>Pasted content</p>
                </div>
            
        </body></html>
