mail/mail-common/src/tests/draft/snapshots/proton_mail_common__draft__compose__tests__sanitize_pasted_plain_content_with_newlines.snap
---
source: mail/mail-common/src/draft/../tests/draft/compose.rs
expression: result
---
<span>Foo</span><span>Bar</span><div><br></div><span>Baz</span>
